@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
 
+saw_071022_3 - Connect works.
+
 saw_071022_2 - Fix missing page module.
 
 saw_071022_1 - Initial commit.
